--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/medias.css">
+    <link rel="shortcut icon" href="imagens/logo-svg.svg" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <img id="logo-header" src="imagens/logo-svg.svg" alt="">
+    </header>
    <main>
         <section id="login">
             <div id="imagem">
@@ -37,6 +41,11 @@
 
         </section>
    </main>
+
+   <footer>
+    <p>Créé par ©Carla Gonçalves</p>
+    <img id="logo-footer" src="imagens/logo-transparent-svg.svg" alt="">
+</footer>
     
 </body>
 </html>
